syntax = "proto3";
option go_package = "./pb";
package auth;

message SignInRequest {
    string email = 1;
    string password = 2;
}

message SignInResponse {
    string email = 1;
    string phone = 2;
    string role = 3;
}

message SignUpRequest {
    string email = 1;
    string password = 2;
    string phone = 3;
    string role = 4;
}

message SignUpResponse {}

service Auth {
    rpc SignIn (SignInRequest) returns (SignInResponse) {}
    rpc SignUp (SignUpRequest) returns (SignUpResponse) {}
}